Import of NUFFIN/Template-Multipass-0.02 from CPAN.
gitpan-cpan-distribution: Template-Multipass
gitpan-cpan-version:      0.02
gitpan-cpan-path:         NUFFIN/Template-Multipass-0.02.tar.gz
gitpan-cpan-author:       NUFFIN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,10 @@
 --- #YAML:1.0
 name:                Template-Multipass
-version:             0.01
+version:             0.02
 abstract:            ~
 license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.32
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Data::Visitor:                 0.08
@@ -13,5 +14,5 @@ requires:
     Test::More:                    0.47
     Test::use::ok:                 0
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
